Fixed input style on iPhone

--- a/client/src/styles/ui.module.css
+++ b/client/src/styles/ui.module.css
@@ -12,6 +12,7 @@
     display: flex;
     flex: 1;
     height: 36px;
+    width: 100%;
     border: none;
     font-size: 17px;
     border-radius: 22px;
@@ -297,6 +298,7 @@
     flex-direction: column;
     position: fixed;
     width: 70%;
+    min-width: 260px;
     bottom: 62px;
     left: 16px;
     border-radius: 14px;
@@ -387,8 +389,10 @@
 }
 
 .menuListItemInput {
+    width: 100%;
+    margin: 0 0 0 20px;
+    padding: 0;
     border: none;
-    width: 150px;
     background-color: transparent;
     text-align: right;
     font-size: 17px;
